--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-eslint": "^10.0.3",
     "chalk": "^2.4.2",
     "core-js": "^3.1.4",
+    "eruda": "^2.2.0",
     "mysql": "^2.18.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
